@@ -8,8 +8,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 
 ### Added
+
 - All CLI parameters except ID can be passed in via the ini config file
 - Doxygen output set to ${CMAKE_PROJECT_ROOT}/docs for easier reading
+- Various CI files for github
+- Funding links
 
 ## [1.0.0] - 2022-06-01
 ### Added
